dev_ops/k8s/examples/manifest-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-world 
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
      - name: hello-world-pod
        image: webapp-flask-helloworld-docker:latest
        imagePullPolicy: Never
        ports: 
        - containerPort: 80
        - containerPort: 443
