dev_ops/k8s/examples/manifest-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-hello-world-ingress
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-world-service
            port:
              number: 80
